manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aks-89e2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aks-89e2"
  template:
    metadata:
      labels:
        app: "aks-89e2"
    spec:
      containers:
        - name: "aks-89e2"
          image: "aksteam3registery.azurecr.io/aks"
          ports:
          - containerPort: 80
