manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksteam3-42d4"
    labels:
        app: "aksteam3-42d4"
spec:
    type: LoadBalancer
    ports:
    - port: 473
      targetPort: 473
      protocol: TCP
      name: http
    selector:
        app: "aksteam3-42d4"
